test_models/syntax_error/syntax_error.stan
parameters {
   real theta;
}
model {
   theta ~ normal()
}
